--- a/웹UI개발/projectA-1.css
+++ b/웹UI개발/projectA-1.css
@@ -1,7 +1,18 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 header {
-  display: flex;
+  position: absolute;
   background-color: black;
-  width: auto;
+  width: 100%;
   height: 140px;
   color: aliceblue;
+}
+
+h1 {
+  position: relative;
+  left: 350px;
+  top: 20px;
 }
