--- a/웹UI개발/projectA-1.css
+++ b/웹UI개발/projectA-1.css
@@ -4,7 +4,7 @@ body {
 }
 
 header {
-  position: absolute;
+  position: relative;
   background-color: black;
   width: 100%;
   height: 140px;
@@ -12,7 +12,13 @@ header {
 }
 
 h1 {
-  position: relative;
+  position: absolute;
   left: 350px;
   top: 20px;
+}
+
+#Portfolio {
+  border: 1px solid;
+  padding: 10px;
+  list-style: none;
 }
