--- a/웹UI개발/projectA-1.css
+++ b/웹UI개발/projectA-1.css
@@ -13,7 +13,7 @@ header {
 
 h1 {
   position: absolute;
-  left: 350px;
+  left: 250px;
   top: 20px;
 }
 
@@ -23,29 +23,39 @@ ul {
   list-style: none;
 }
 
-.portfolio{
+.portfolio {
   width: 90%;
   margin: 10px auto;
 }
 
+.blackBox {
+  text-align: center;
+  position: absolute;
+  left: 250px;
+  display: flex;
+}
+
 .first {
-  border: 1px solid black;
+  border: 1px solid rgb(164, 164, 164);
   float: left;
-  width:30%;
-  box-sizing: border-box;
+  width:300px;
+  box-sizing: inherit;
+  margin: 50px 0;
+  padding: 5px;
 }
 
 .second{
-  border: 1px solid black;
+  border: 1px solid rgb(164, 164, 164);
   float: left;
-  margin-left: 5%;
-  width:30%;
-  box-sizing: border-box;
+  width:300px;
+  box-sizing: inherit;
+  margin: 50px 50px;
 }
 
 .third{
-  border: 1px solid black;
-  float: right;
-  width:30%;
-  box-sizing: border-box;
+  border: 1px solid rgb(164, 164, 164);
+  float: left;
+  width:300px;
+  box-sizing: inherit; 
+  margin: 50px 0;
 }
