--- a/웹UI개발/projectA-1.css
+++ b/웹UI개발/projectA-1.css
@@ -13,7 +13,7 @@ header {
 
 h1 {
   position: absolute;
-  left: 250px;
+  left: 300px;
   top: 20px;
 }
 
@@ -23,7 +23,7 @@ ul {
   list-style: none;
 }
 
-.portfolio {
+#portfolio {
   width: 90%;
   margin: 10px auto;
 }
@@ -31,7 +31,7 @@ ul {
 .blackBox {
   text-align: center;
   position: absolute;
-  left: 250px;
+  left: 300px;
   display: flex;
 }
 
@@ -50,6 +50,7 @@ ul {
   width:300px;
   box-sizing: inherit;
   margin: 50px 50px;
+  padding: 5px;
 }
 
 .third{
@@ -58,4 +59,18 @@ ul {
   width:300px;
   box-sizing: inherit; 
   margin: 50px 0;
+  padding: 5px;
+}
+
+.component {
+  position: absolute;
+  left: 300px;
+  top: 250px;
+}
+
+.one {
+  position: relative;
+  left: 300px;
+  top: 160px;
+  width: 1039px;
 }
