[#20] main 테이블 및 footer 수정 및 만들기(텍스트 위치, footer 위치 및 텍스트 컬러)

--- a/웹UI개발/projectA-1.css
+++ b/웹UI개발/projectA-1.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   padding: 0;
@@ -13,7 +14,7 @@ header {
 
 h1 {
   position: absolute;
-  left: 300px;
+  left: 350px;
   top: 20px;
 }
 
@@ -31,7 +32,7 @@ ul {
 .blackBox {
   text-align: center;
   position: absolute;
-  left: 300px;
+  left: 350px;
   display: flex;
 }
 
@@ -64,35 +65,38 @@ ul {
 
 .component {
   position: absolute;
-  left: 300px;
+  left: 350px;
   top: 250px;
 }
 
 .one { /* 가로 줄 */
   position: relative;
-  left: 300px;
+  left: 350px;
   top: 160px;
   width: 1039px;
 }
 
 table { 
-  border: 1px solid #989898;
+  border: 1px solid #acabab;
   border-collapse: collapse;
   position: relative;
-  left: 300px;
+  left: 350px;
   top: 200px;
   width: 1039px;
   } 
 
 .table {
   margin: 0px 0px 40px;
-  border-top: 1px solid #cccccc;
+  
 }
 #table {
   background-color: rgb(228, 228, 228);
   color: black;
   display: block;
   height: 50px;
+  display: table-cell;
+  vertical-align: middle;
+  
 }
 .form {
   margin: 20px 0px 40px;
@@ -102,6 +106,9 @@ table {
   color: black;
   display: block;
   height: 50px;
+  display: table-cell;
+  vertical-align: middle;
+  
 
 }
 .list {
@@ -112,35 +119,46 @@ table {
   color: black;
   display: block;
   height: 50px;
+  display: table-cell;
+  vertical-align: middle;
 }
  tr{
-    border: 1px solid #a5a4a4;
     padding: 10px;
     height: 100%;
  } 
 
  #contents1 {
-  display: block;
   height: 100px;
   padding: 1px solid rgb(228, 228, 228);
+  border-top: 1px solid #acabab;
+  display: table-cell;
   vertical-align: middle;
  }
  #contents2 {
-  display: block;
   height: 100px;
   padding: 1px solid rgb(228, 228, 228);
+  border-top: 1px solid #acabab;
+  display: table-cell;
+  vertical-align: middle;
  }
  #contents3{
-  display: block;
   height: 100px;
   padding: 1px solid rgb(228, 228, 228);
+  border-top: 1px solid #acabab;
+  display: table-cell;
+  vertical-align: middle;
  }
-  
- #footer {
-  width: 100%;
-  height: 99999px; /* footer의 높이 */
-  position: absolute;  
-  bottom: 0;
-  left: 0;
-  display: block;
- }
+ .pf{
+  height : auto;
+  min-height: 100%;
+  padding-bottom: 500px;
+}
+footer{
+  height: 500px;
+  position : relative;
+  transform : translateY(-100%);
+  text-align: center;
+  border-top: 1px solid #acabab;
+  top: 750px;
+}
+ 
