--- a/웹UI개발/projectA-1.css
+++ b/웹UI개발/projectA-1.css
@@ -96,6 +96,8 @@ table {
   height: 50px;
   display: table-cell;
   vertical-align: middle;
+  padding: 20px;
+  font-size: 30px;
   
 }
 .form {
@@ -108,12 +110,10 @@ table {
   height: 50px;
   display: table-cell;
   vertical-align: middle;
-  
+  padding: 20px;
+  font-size: 30px;
+}
 
-}
-.list {
-  bottom: 0px;
-}
 #list {
   background-color: rgb(228, 228, 228);
   color: black;
@@ -121,6 +121,8 @@ table {
   height: 50px;
   display: table-cell;
   vertical-align: middle;
+  padding: 20px;
+  font-size: 30px;
 }
  tr{
     padding: 10px;
@@ -129,21 +131,21 @@ table {
 
  #contents1 {
   height: 100px;
-  padding: 1px solid rgb(228, 228, 228);
+  padding: 40px;
   border-top: 1px solid #acabab;
   display: table-cell;
   vertical-align: middle;
  }
  #contents2 {
   height: 100px;
-  padding: 1px solid rgb(228, 228, 228);
+  padding: 40px;
   border-top: 1px solid #acabab;
   display: table-cell;
   vertical-align: middle;
  }
  #contents3{
   height: 100px;
-  padding: 1px solid rgb(228, 228, 228);
+  padding: 40px;
   border-top: 1px solid #acabab;
   display: table-cell;
   vertical-align: middle;
