--- a/Starbucks/css/main.css
+++ b/Starbucks/css/main.css
@@ -5,6 +5,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   font-family: 'Nanum Gothic', sans-serif;
+  height: 3000px;
 }
 img {
   display: block;
@@ -12,23 +13,29 @@ img {
 a {
   text-decoration: none;
 }
+.inner {
+  width: 1100px;
+  margin: 0 auto;
+  position: relative;
+}
 
 /* header */
 header {
+  width: 100%;
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
+  position: fixed;
+  top: 0;
 }
 header .inner {
-  width: 1100px;
   height: 120px;
-  margin: 0 auto;
-  position: relative;
 }
 header .logo {
   height: 75px;
   position: absolute ;
   top: 0;
   bottom: 0;
+  left: 0;
   margin: auto;
 }
 header .sub-menu {
@@ -53,14 +60,14 @@ header .sub-menu ul.menu li::before {
   position: absolute;
   top: 0;
   bottom: 0;
-  margin: auto 0;
+  margin: auto;
 }
 header .sub-menu ul.menu li:first-child ::before {
   display: none;
 }
 header .sub-menu ul.menu li a {
   background-color: white;
-  font-size: 12px;
+  font-size: 13px;
   padding: 11px 16px;
   display: block;
   color: #656565;
@@ -75,7 +82,7 @@ header .sub-menu .search {
 }
 header .sub-menu .search input {
   width: 36px;
-  height: 34px;
+  height: inherit;
   padding: 4px 10px;
   border: 1px solid #ccc;
   box-sizing: border-box;
@@ -96,7 +103,7 @@ header .sub-menu .search .material-symbols-outlined {
   top: 0;
   bottom: 0;
   right: 5px;
-  margin: auto 0;
+  margin: auto;
   transition: .4s;
 }
 header .sub-menu .search.focused .material-symbols-outlined {
@@ -109,11 +116,8 @@ header .main-menu {
   z-index: 1;
   display: flex;
 }
-header .main-menu .item {
-
-}
 header .main-menu .item .item__name {
-  padding: 10px 20px 304px 20px;
+  padding: 10px 20px 34px 20px;
   font-family: Arial, sans-serif;
   font-size: 13px;
 }
@@ -124,5 +128,61 @@ header .main-menu .item:hover .item__name {
 
 }
 header .main-menu .item .item__contents {
-
+  width: 100%;
+  position: fixed;
+  left: 0;
+  display: none;
 }
+header .main-menu .item:hover .item__contents {
+  display: block;
+}
+header .main-menu .item .item__contents .contents__menu {
+  background-color: #2c2a29;
+}
+header .main-menu .item .item__contents .contents__menu > ul {
+  padding: 20px 0;
+  display: flex;
+}
+header .main-menu .item .item__contents .contents__menu > ul > li {
+  width: 220px;
+}
+header .main-menu .item .item__contents .contents__menu > ul > li h4 {
+  padding: 3px 0 12px 0;
+  font-size: 14px;
+  color:#fff;
+}
+header .main-menu .item .item__contents .contents__menu > ul > li ul li {
+  padding: 5px 0;
+  font-size: 12px;
+  color: #999;
+  cursor: pointer;
+}
+header .main-menu .item .item__contents .contents__menu > ul > li ul li:hover {
+ color: #669900;
+}
+header .main-menu .item .item__contents  .contents__texture {
+  padding: 26px 0;
+  font-size: 12px;
+  background-image: url("../images/main_menu_pattern.jpg");
+}
+header .main-menu .item .item__contents  .contents__texture h4 {
+  color: #999;
+  font-weight: 900;
+}
+header .main-menu .item .item__contents  .contents__texture p {
+  color: #64a70b;
+  margin: 4px 0 14px;
+}
+header .badges {
+  position: absolute;
+  top: 132px;
+  right: 12px;
+}
+header .badges .badge {
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 12px;
+  box-shadow: 4px 4px 10px rgba(0,0,0,.15);
+  cursor: pointer;
+}
+
