--- a/Starbucks/css/main.css
+++ b/Starbucks/css/main.css
@@ -186,3 +186,26 @@ header .badges .badge {
   cursor: pointer;
 }
 
+/* visual */
+.visual {
+  margin-top: 120px;
+  background-image: url(../images/visual_bg.jpg);
+  background-position: center;
+}
+.visual .inner {
+  height: 646px;
+  background-color: orange;
+}
+.visual .title .btn {
+
+}
+.visual .cup1 .image {
+
+}
+.visual .cup1 .text {
+
+}
+.visual .spoon {
+
+}
+
