--- a/Starbucks/css/main.css
+++ b/Starbucks/css/main.css
@@ -18,7 +18,55 @@ a {
   margin: 0 auto;
   position: relative;
 }
-
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color: #333;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: .4s;
+}
+.btn:hover {
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse {
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse:hover {
+  background-color: transparent;
+  color: #333;
+}
+.btn.btn--brown {
+  color: #592818;
+  border-color: #592818;
+}
+.btn.btn--brown:hover {
+  color: #fff;
+  background-color: #592818;
+}
+.btn .btn--gold {
+  color: #D9AABA;
+  border-color: #D9AABA;
+}
+.btn .btn--gold:hover{
+  color: #fff;
+ background-color: #D9AABA;
+}
+.btn .btn--white {
+  color: #fff;
+  border-color: #FFF;
+}
+.btn .btn--white:hover {
+  color:#333;
+  border-color: #FFF;
+}
 /* header */
 header {
   width: 100%;
@@ -26,8 +74,10 @@ header {
   border-bottom: 1px solid #c8c8c8;
   position: fixed;
   top: 0;
+  z-index: 9;
 }
-header .inner {
+header > .inner {
+  /* 헤더 안에 자식요소인 inner만 */
   height: 120px;
 }
 header .logo {
@@ -194,18 +244,40 @@ header .badges .badge {
 }
 .visual .inner {
   height: 646px;
-  background-color: orange;
+}
+.visual .title {
+  position: absolute;
+  top: 88px;
+  left: -10px;
 }
 .visual .title .btn {
-
+  position: absolute;
+  top: 259px;
+  left: 173px;
 }
-.visual .cup1 .image {
-
+.visual .cup1.image {
+  position: absolute;
+  bottom: 0;
+  right: -47px;
 }
-.visual .cup1 .text {
-
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+.visual .cup2.text {
+  position: absolute;
+  bottom: 222px;
+  right: 416px;
 }
 .visual .spoon {
-
-}
+    position: absolute;
+    bottom: 0px;
+    left: 275px;
+  }
 
