--- a/1만 시간의 법칙 clone/main.css
+++ b/1만 시간의 법칙 clone/main.css
@@ -1,74 +1,251 @@
 @charset "UTF-8";
 @import url(style.css);
 
+@keyframes rotate {
+  0% {
+    transform: rotate(deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+  
+}
+
 html, body {
   width: 100%;
   height: 100%;
 }
 
-body {
+body  {
   background-color: #5B2386;
+  font-family: 'GmarketSansMedium';
+  color: #fff;
+}
+/* main */
+#contents {
+  display: flex;
+  justify-content: center;
+}
+.wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
 }
 
-.header {
+/* 제목 이미지 */
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.title .clock_img {
   position: relative;
+  width: 265px;
+  height: 265px;
 }
-.header .img1 {
+.title_img {
   position: absolute;
-  left: 50%;
-  transform: translate(-50%, 15%); 
-}
-.header .img2 {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 90%);
   width: 564px;
 }
-.header img {
+.title_img img {
   width: 100%;
   height: auto;
 }
-
-.header p {
+/* 설명 */
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+.intro .intro_saying {
   font-family: 'OTEnjoystoriesBA';
+  font-size: 36px;
   color: #F5DF4D;
-  font-size: 35px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -350%);
+  margin-bottom: 50px;
 }
-
-.quote2 {
+.intro .explain {
+  display: flex;
+  justify-content: center;
   text-align: center;
-  line-height: 30px;
-  color: #fff;
-  font-family: 'GmarketSansMedium';
-  position: fixed;
-  top: 50%;
-  left: 50%;
+  margin-bottom: 80px;
+  position: relative;
 }
-.quote2 span {
-  font-family: 'GmarketSansBold';
-  font-size: 20px;
+.intro .quotes {
+  padding-top: 20px;
 }
-.quote2 p {
-  transform: translate(-50%, -20%);
+.intro .explain p {
+  position: absolute;
   font-size: 17px;
+  line-height: 1.7;
 }
-.quote2 img {
-  transform: translate(-70%, 50%);
-  
+.intro .explain span {
+  font-family: 'GmarketSansBold';
+  font-size: 20px; 
 }
-.quote2 h2 {
-  transform: translate(-50%, 200%);
+/* 사용자 입력 */
+.inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 20px;
+  margin-top: 50px;
+  margin-bottom: 70px;
 }
-.quote2 > h2 input {
+.inputs div  {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.inputs input {
   padding: 15px 20px;
   margin: 0 15px;
   border: none;
   border-radius: 10px;
+  font-size: 20px;
+  font-family: 'GmarketSansMedium';
   width: 200px;
+}
+.input input::placeholder {
+  color: #BABCBE;
+}
 
+/* 버튼 스타일 */
+button {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  font-family: "GmarketSansBold";
+  color: #5B2386;
+  background-color: #FCEE21;
+  border: none;
+  border-radius: 30px;
+  padding: 10px 40px;
+  cursor: pointer;
+  word-break: keep-all;
+}
+.start {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+.start .btn_wrap {
+  position: relative;
+}
+.start .click_img {
+  position: absolute;
+  right: -75px;
+  bottom: -25px;
+}
+
+/* 결과 로딩 */
+.result_loading {
+  display: none;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+.result_loading .img_wrap {
+  width: 100px;
+  height: 100px;
+}
+.result_loading .img_wrap img {
+  width: 100%;
+  height: auto;
+  animation: rotate 1.1s infinite linear; 
+}
+/* 결과 */
+.result {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  line-height: 1.5;
+  margin-bottom: 80px;
+}
+.result .result_wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.result .result_wrap div {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
+.result span {
+  padding: 0 20px;
+  font-family: "GmarketSansBold";
+  font-size: 70px;
+}
+.buttons{
+  display: flex;
+  justify-content: center;
+  margin-top: 70px;
+  flex-direction: column;
+}
+
+.buttons .share .share_btn {
+  background-color: #fff;
+  margin-left: 20px;
+}
+
+#modal {
+  position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  top:0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 999;
+}
+#modal .modal_wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 600px;
+  height: 600px;
+  background-color: #fff;
+  border-radius: 20px;
+}
+#modal .cheer {
+  font-family: 'OTEnjoystoriesBA';
+  color: #5B2386;
+  text-align: center;
+}
+#modal .cheer h1 {
+  font-size: 80px;
+}
+#modal .cheer h3 {
+  font-size: 30px;
+}
+#modal .licat_img {
+  margin-bottom: 20px;
+}
+#modal .close_btn {
+  box-shadow: 0px 5px 20px 1px rgba(0, 0, 0, 15%), 0px 5px 16px 0px rgb(0 0 0 / 15%);
+  margin-bottom: 20px;
+}
+#modal .btn p {
+  color: #747474;
+  font-size: 13px;
+  text-align: center;
+}
+
+#copyright {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 50px;
+  left: 0;
+  bottom: 0;
+}
+#copyright p {
+  font-size: 10px;
+  line-height: 1.5;
+  padding: 20px 0;
+  text-align: center;
 }
