--- a/토이프로젝트/토이프로젝트/style1.css
+++ b/토이프로젝트/토이프로젝트/style1.css
@@ -42,6 +42,9 @@ html body {
   overflow-y: auto;
   overflow-x: hidden;
 }
+.box::-webkit-scrollbar {
+  display: none;
+}
 .nav {
   /* position: absolute; */
   width: 375px;
@@ -300,6 +303,8 @@ input[type="range"]::-webkit-slider-thumb {
   border-bottom: 1px solid #eee;
 }
 .main2 .history ul li span {
+  display: flex;
+  justify-content: space-between;
 }
 
 .main .menu {
