--- a/토이프로젝트/토이프로젝트/style2.css
+++ b/토이프로젝트/토이프로젝트/style2.css
@@ -11,12 +11,11 @@
 }
 html body {
   width: 100%;
-  height: 100%;
   background: #e5e5e5;
 }
 .slide {
   width: 375px;
-  /* height: 812px; */
+  height: 825px;
   background-color: #fff;
   margin: 0 auto;
   position: relative;
@@ -63,29 +62,31 @@ html body {
   bottom: 30px;
   cursor: pointer;
   position: relative;
+  margin-right: 20px;
+  bottom: 9px;
 }
 .title11 > .out {
   font-size: 24px;
-  padding: 30px 20px;
-  position: relative;
+  padding-left: 20px;
 }
 .money > span:nth-of-type(1) {
-  padding: 30px 20px;
-  position: relative;
+  padding-left: 20px;
   color: #444444;
   font-size: 18px;
 }
 .money > span:nth-of-type(2) {
   color: #ff5f00;
   float: right;
+  margin-right: 35px;
+  font-size: 24px;
 }
-.input > input {
+.main > ul > li > input {
   -webkit-appearance: none;
-  width: 308px;
+  margin: 26px 19px;
+  width: 341px;
   background: #c4c4c4;
   border-radius: 3px;
-  height: 6px;
-  text-align: center;
+  height: 7px;
 }
 input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -96,8 +97,65 @@ input[type="range"]::-webkit-slider-thumb {
   border: 1.5px solid #ffffff;
   cursor: pointer;
 }
-.report .div {
-  font-size: 24px;
-  padding: 90px 30px;
+.report {
   position: relative;
+  overflow-x: scroll;
+  width: 600px;
+  margin-left: 20px;
+}
+.month {
+  width: 850px;
+  margin: 20px 0;
+}
+.patten > div {
+  font-size: 18px;
+  padding: 40px 20px 10px;
+  position: relative;
+}
+.money > .money2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  text-align: center;
+  font-weight: 700;
+  font-size: 40px;
+}
+ul > li {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 20px;
+}
+ul > li > img {
+  width: 30px;
+  height: 25px;
+}
+
+.menu {
+  position: fixed;
+  bottom: 0px;
+  width: 375px;
+  background: linear-gradient(163.63deg, #00bdb2 11.35%, #c4e7b8 139.96%);
+}
+.menu ul {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25%, 1fr));
+}
+.menu ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  cursor: pointer;
+}
+.menu ul li button {
+  border: 0;
+  outline: 0;
+}
+.menu ul li button img {
+  width: 24px;
+  height: 24px;
+  filter: brightness(80%);
 }
